--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,6 @@ services:
       - discovery.type=single-node
       - plugins.security.ssl.http.enabled=false
       - bootstrap.memory_lock=true # along with the memlock settings below, disables swapping
-      - "DISABLE_INSTALL_DEMO_CONFIG=false" # Prevents execution of bundled demo script which installs demo certificates and security configurations to OpenSearch
       - "OPENSEARCH_JAVA_OPTS=-Xms512m -Xmx512m" # minimum and maximum Java heap size, recommend setting both to 50% of system RAM
     ulimits:
       memlock:
@@ -18,6 +17,9 @@ services:
         hard: 65536
     volumes:
       - ./opensearch-data:/usr/share/opensearch/data
+      - type: bind
+        source: ./opensearch-security/internal_users.yml
+        target: /usr/share/opensearch/config/opensearch-security/internal_users.yml
     ports:
       - 9200:9200
       - 9600:9600 # required for Performance Analyzer
