--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,26 +1,32 @@
-version: '3'
+version: "3"
 services:
   opensearch:
     labels:
       - traefik.enable=true
       - traefik.http.routers.search.rule=Host(`search.${HOST}`)        
       - traefik.http.services.search.loadbalancer.server.port=9200
-      - traefik.http.routers.search.tls=true
-      - traefik.http.routers.search.tls.certresolver=file-index-resolver
+#      - traefik.http.routers.search.tls=true
+#      - traefik.http.routers.search.tls.certresolver=file-index-resolver
+    environment:
+      - "OPENSEARCH_JAVA_OPTS=-Xms8g -Xmx8g" # minimum and maximum Java heap size, recommend setting both to 50% of system RAM
+    restart: always
+
   opensearch-dashboards:
     labels:
       - traefik.enable=true
       - traefik.http.routers.dashboards.rule=Host(`${HOST}`)        
       - traefik.http.services.dashboards.loadbalancer.server.port=5601
-      - traefik.http.routers.dashboards.tls=true
-      - traefik.http.routers.dashboards.tls.certresolver=file-index-resolver
+#      - traefik.http.routers.dashboards.tls=true
+#      - traefik.http.routers.dashboards.tls.certresolver=file-index-resolver
+    restart: always
+
   traefik:
     image: "traefik:v2.4"
     ports:
       - "80:80"
-      - "443:443"
+#      - "443:443"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
-      - "./acme.json:/acme.json"
+#      - "./acme.json:/acme.json"
       - "./traefik.toml:/etc/traefik/traefik.toml"
     restart: always
