--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,6 +7,8 @@ services:
       - traefik.http.services.search.loadbalancer.server.port=9200
     environment:
       - "OPENSEARCH_JAVA_OPTS=-Xms8g -Xmx8g" # minimum and maximum Java heap size, recommend setting both to 50% of system RAM
+    volumes:
+      - ./opensearch-security/internal_users.yml:/usr/share/opensearch/config/opensearch-security/internal_users.yml
     restart: always
 
   opensearch-dashboards:
