--- a/.env_template
+++ b/.env_template
@@ -1,7 +1,12 @@
+# Connection setup used by the `import.py`
 FILE_INDEX_HOST=localhost
+# FILE_INDEX_HOST=https://file-index.dainst.de 
 FILE_INDEX_PORT=9200
 FILE_INDEX_USER=admin
 FILE_INDEX_PASSWORD=admin
 FILE_INDEX_USE_SSL=False
 
+
+# Used in the deployment docker-compose, only relevant
+# if you want to setup a new OpenSearch installation
 # HOST=file-index.dainst.de 
